--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "physics"
+name = "ospf_rust_physics"
 version = "0.1.0"
 edition = "2021"
 authors = ["fuookami <fuookami@163.com>"]
